--- a/how-to-play — копия.html
+++ b/how-to-play — копия.html
@@ -20,36 +20,33 @@
   <header class="header">
     <div class="container">
       <nav class="menu">
-        <a class="logo menu__logo" href="#">
-          <img class="logo__menu" src="images/logo.png" alt="logo">
-        </a>
         <button class="menu__btn" type="button">
           <span></span>
           <span class="sr-only">відкрити меню</span>
         </button>
         <ul class="menu__items">
           <li class="menu__item">
-            <a class="menu__link menu__link--active" href="#">
+            <a class="menu__link" href="">
               Skintoto
             </a>
           </li>
           <li class="menu__item">
-            <a class="menu__link" href="#service">
+            <a class="menu__link" href="how-to-play.html">
               Cara Bermain
             </a>
           </li>
           <li class="menu__item">
-            <a class="menu__link" href="#collections">
+            <a class="menu__link" href="promosi.html">
               Promosi
             </a>
           </li>
           <li class="menu__item">
-            <a class="menu__link" href="#products">
+            <a class="menu__link" href="skintoto-login.html">
               Login
             </a>
           </li>
           <li class="menu__item">
-            <a class="menu__link" href="#about">
+            <a class="menu__link" href="skintoto-slot.html">
               Skintoto slot
             </a>
           </li>
@@ -61,7 +58,7 @@
   <main class="main">
     <section class="section">
       <div class="container">
-        <h2 class="__title title">
+        <h2 class="title">
           SKINTOTO CARA BERMAIN
         </h2>
         <img class="img" src="" alt="">
@@ -70,7 +67,7 @@
 
     <section class="section">
       <div class="container">
-        <h2 class="__title title">
+        <h2 class="title">
           SKINTOTO CARA BERMAIN
         </h2>
         <img class="img" src="" alt="">
@@ -83,12 +80,15 @@
 
   </main>
 
-  <footer class="footer">
-    <img class="img" src="" alt="">
-    <p class="copy">© Copyright 2023
-      <span>skintoto-id.com</span>
-    </p>
-  </footer>
+    <footer class="footer">
+      <div class="container">
+        <img class="img" src="" alt="">
+        <div class="copy">
+          <span>© Copyright 2024</span>
+          <a href="#">skintoto-id.com</a>
+        </div>
+      </div>
+    </footer>
 
   <script src="js/avif.js?_v=20240419015543"></script>
   <script src="js/main.min.js?_v=20230727015200"></script>
