--- a/how-to-play.html
+++ b/how-to-play.html
@@ -19,67 +19,65 @@
 <body class="body">
   <header class="header">
     <div class="container">
-      <nav class="menu">
-        <a class="logo menu__logo" href="#">
-          <img class="logo__menu" src="images/logo.png" alt="logo">
-        </a>
-        <button class="menu__btn" type="button">
-          <span></span>
-          <span class="sr-only">відкрити меню</span>
-        </button>
-        <ul class="menu__items">
-          <li class="menu__item">
-            <a class="menu__link menu__link--active" href="#">
-              Skintoto
-            </a>
-          </li>
-          <li class="menu__item">
-            <a class="menu__link" href="#service">
-              Cara Bermain
-            </a>
-          </li>
-          <li class="menu__item">
-            <a class="menu__link" href="#collections">
-              Promosi
-            </a>
-          </li>
-          <li class="menu__item">
-            <a class="menu__link" href="#products">
-              Login
-            </a>
-          </li>
-          <li class="menu__item">
-            <a class="menu__link" href="#about">
-              Skintoto slot
-            </a>
-          </li>
-        </ul>
-      </nav>
+        <nav class="menu">
+          <button class="menu__btn" type="button">
+            <span></span>
+            <span class="sr-only">відкрити меню</span>
+          </button>
+          <ul class="menu__items">
+            <li class="menu__item">
+              <a class="menu__link" href="">
+                Skintoto
+              </a>
+            </li>
+            <li class="menu__item">
+              <a class="menu__link" href="how-to-play.html">
+                Cara Bermain
+              </a>
+            </li>
+            <li class="menu__item">
+              <a class="menu__link" href="promosi.html">
+                Promosi
+              </a>
+            </li>
+            <li class="menu__item">
+              <a class="menu__link" href="skintoto-login.html">
+                Login
+              </a>
+            </li>
+            <li class="menu__item">
+              <a class="menu__link" href="skintoto-slot.html">
+                Skintoto slot
+              </a>
+            </li>
+          </ul>
+        </nav>
     </div>
   </header>
 
   <main class="main">
     <section class="section">
       <div class="container">
-        <h2 class="__title title">
+        <h2 class="title">
           SKINTOTO CARA BERMAIN
         </h2>
-        <img class="img" src="" alt="">
+        <img class="img" src="images/9.png" alt="9">
       </div>
     </section>
 
     <section class="section">
       <div class="container">
-        <h2 class="__title title">
+        <h2 class="title">
           NOMOR KELUAR
         </h2>
         <div class="text">
-          nomor pengeluaran adalah berdasar kan 1st prize nomor yang dihasilkan oleh 4D Singapore untuk melihat hasil
-          nomor
-          tersebut bisa dilihat di
-          skintoto-id.com.
-        </div>
-        <div class="">
+          <span>
+            nomor pengeluaran adalah berdasar kan 1st prize nomor yang dihasilkan oleh 4D Singapore untuk melihat
+            hasil
+            nomor
+            tersebut bisa dilihat di
+            skintoto-id.com.
+          </span>
           <p>
             Contoh nomor bola angka yang dihasilkan Singapore toto:
           </p>
@@ -90,17 +88,20 @@
           <p>Bola 5 = 36</p>
           <p>Bola 6 = 38</p>
           <p>Additional Number = 04</p>
-          <p>Nomor buka 0885</p>
+          <span>Nomor buka 0885</span>
           <span>Cara perhitungan rumus:</span>
           <p>Bola di urutkan dari yang terkecil sampai yang terbesar.</p>
           <p>Bola ke 1 sampai bola ke 6 dijumlahkan 7+21+29+32+36+38 = 163 di kali 2 = 326</p>
           <p>Hasil dari 326 dikurangkan bola ke 1 ( 7 ) dan bola ke 6 ( 38 ) = 281</p>
           <p>Sisa 281 ditambah additional number (04) = 285</p>
-          <p>Dari hasil 285, didapatkan 2 angka puluhan 85 tersebut. Setelah itu dicari angka ratusan dan ribuan nya.
+          <p>
+            Dari hasil 285, didapatkan 2 angka puluhan 85 tersebut. Setelah itu dicari angka ratusan dan ribuan nya.
           </p>
-          <p>Untuk mendapat angka ratusan kita mengambil dari bola ke 4 ( 32 ) ditambah bola ke 5 ( 36 ) jumlah = 68
+          <p>
+            Untuk mendapat angka ratusan kita mengambil dari bola ke 4 ( 32 ) ditambah bola ke 5 ( 36 ) jumlah = 68
             kita
-            ambil ekor</p>
+            ambil ekor
+          </p>
           <p>8 ini sebagai angka untuk ratusan</p>
           <p>Untuk mendapat angka ribuan kita mengambil dari bola ke 2 ( 21 ) ditambah bola ke 3 ( 29 ) jumlah = 50 kita
             ambil ekor</p>
@@ -110,7 +111,7 @@
           <p>Ribuan = 0</p>
           <p>Ratusan = 8</p>
           <p>Puluhan = 85</p>
-          <p>Hasilnya = buka 0885</p>
+          <span>Hasilnya = buka 0885</span>
           <div class="text">
             Untuk melihat hasil dari perputaran nomor untuk toto Jakarta ini bisa dilihat di website resminya
             skintoto-id.com..
@@ -130,13 +131,16 @@
 
     <section class="section">
       <div class="container">
-        <h2 class="__title title">
+        <h2 class="title">
           JENIS PERMAINAN
         </h2>
         <div class="text">
-          Jenis permainan togel sudah sangat banyak, sudah membaur dan menyesuaikan diri dengan permainan lokal. Alhasil
-          dikenal
-          beberapa karakteristik togel daerah.
+          <span>
+            Jenis permainan togel sudah sangat banyak, sudah membaur dan menyesuaikan diri dengan permainan lokal.
+            Alhasil
+            dikenal
+            beberapa karakteristik togel daerah.
+          </span>
           <span>Jenis permainan yang disajikan disini adalah:</span>
           <p>4D, 3D dan 2D</p>
           <p>Colok Bebas</p>
@@ -160,16 +164,16 @@
         <a class="link" href="#">LOGIN</a>
       </div>
     </section>
-
-
-
   </main>
 
   <footer class="footer">
-    <img class="img" src="" alt="">
-    <p class="copy">© Copyright 2023
-      <span>skintoto-id.com</span>
-    </p>
+    <div class="container">
+      <img class="img" src="images/10.png" alt="10">
+      <div class="copy">
+        <span>© Copyright 2024</span>
+        <a href="#">skintoto-id.com</a>
+      </div>
+    </div>
   </footer>
 
   <script src="js/avif.js?_v=20240419015543"></script>
