--- a/index.html
+++ b/index.html
@@ -12,8 +12,9 @@
   <meta name="robots" content="index, follow">
   <!-- <link rel="icon" href="favicon.ico" type="image/x-icon">
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon"> -->
-    <!-- htnl -->
+  <!-- htnl -->
   <title></title>
+  <link href="https://skintoto-id.com" rel="canonical">
   <link rel="stylesheet" href="css/style.min.css?_v=20230727015200">
 </head>
 
@@ -21,36 +22,33 @@
   <header class="header">
     <div class="container">
       <nav class="menu">
-        <a class="logo menu__logo" href="#">
-          <img class="logo__menu" src="images/logo.png" alt="logo">
-        </a>
         <button class="menu__btn" type="button">
           <span></span>
           <span class="sr-only">відкрити меню</span>
         </button>
         <ul class="menu__items">
           <li class="menu__item">
-            <a class="menu__link menu__link--active" href="#">
+            <a class="menu__link" href="">
               Skintoto
             </a>
           </li>
           <li class="menu__item">
-            <a class="menu__link" href="#service">
+            <a class="menu__link" href="how-to-play.html">
               Cara Bermain
             </a>
           </li>
           <li class="menu__item">
-            <a class="menu__link" href="#collections">
+            <a class="menu__link" href="promosi.html">
               Promosi
             </a>
           </li>
           <li class="menu__item">
-            <a class="menu__link" href="#products">
+            <a class="menu__link" href="skintoto-login.html">
               Login
             </a>
           </li>
           <li class="menu__item">
-            <a class="menu__link" href="#about">
+            <a class="menu__link" href="skintoto-slot.html">
               Skintoto slot
             </a>
           </li>
@@ -61,14 +59,14 @@
   <main class="main">
     <section class="section">
       <div class="container">
-        <h1 class="__title title">
+        <h1 class="sr-only">
           SKINTOTO BANDAR TOGEL
         </h1>
 
-        <h2 class="__title title">
-          .
+        <h2 class="sr-only">
+          SKINTOTO BANDAR TOGEL
         </h2>
-        <img class="img" src="" alt="">
+        <img class="img" src="images/1.png" alt="1">
       </div>
     </section>
 
@@ -83,25 +81,27 @@
           lotere Hong Kong, yang saat ini menjadi salah satu pasar lotere terbesar di Indonesia.
           <!-- 3 строчки -->
         </div>
+
+        <a class="link" href="#">DAFTAR</a>
+        <a class="link" href="#">LOGIN</a>
+        <div class="text">
+          Skintoto telah menjadi dealer resmi lotere di Indonesia dengan jumlah penggemar lotere online, judi, dan slot
+          yang
+          besar.
+        </div>
+        <img class="img" src="images/2.png" alt="2">
+        <div class="text">
+          <!-- 4 строчки -->
+          Lotere Singapura dan lotere Hong Kong menjadi pasar tiket lotere paling populer di Indonesia karena kedua
+          pasar
+          ini
+          dianggap paling dapat diandalkan dan aman untuk semua orang, sehingga Skintoto juga menjadi kolam resmi untuk
+          kedua
+          negara tersebut.
+        </div>
+        <a class="link" href="#">DAFTAR</a>
+        <a class="link" href="#">LOGIN</a>
       </div>
-      <a class="link" href="#">DAFTAR</a>
-      <a class="link" href="#">LOGIN</a>
-      <div class="text">
-        Skintoto telah menjadi dealer resmi lotere di Indonesia dengan jumlah penggemar lotere online, judi, dan slot
-        yang
-        besar.
-      </div>
-      <img class="img" src="" alt="">
-      <div class="text">
-        <!-- 4 строчки -->
-        Lotere Singapura dan lotere Hong Kong menjadi pasar tiket lotere paling populer di Indonesia karena kedua pasar
-        ini
-        dianggap paling dapat diandalkan dan aman untuk semua orang, sehingga Skintoto juga menjadi kolam resmi untuk
-        kedua
-        negara tersebut.
-      </div>
-      <a class="link" href="#">DAFTAR</a>
-      <a class="link" href="#">LOGIN</a>
     </section>
 
     <section class="section">
@@ -109,7 +109,7 @@
         <h2 class="__title title">
           Tentang Lotre Online SKINTOTO
         </h2>
-        <img class="img" src="" alt="">
+        <img class="img" src="images/3.png" alt="3">
         <div class="text">
           <!-- 8 строчек -->
           SKINTOTO adalah situs kasino online terbesar dan paling terpercaya yang sangat terkenal di Indonesia. SKINTOTO
@@ -168,7 +168,7 @@
         <h2 class="__title title">
           Skintoto APK
         </h2>
-        <img class="img" src="" alt="">
+        <img class="img" src="images/4.png" alt="4">
         <div class="text">
           <!-- 6 строчек -->
           Kasino online SKINTOTO saat ini tidak memiliki versi untuk Android dan iOS, tetapi ada versi
@@ -199,7 +199,7 @@
           selalu tersedia.
         </div>
         <a class="link" href="">SKINTOTO LINK ALTERNATIF</a>
-        <img class="img" src="" alt="">
+        <img class="img" src="images/5.png" alt="5">
 
 
       </div>
@@ -208,10 +208,13 @@
   </main>
 
   <footer class="footer">
-    <img class="img" src="" alt="">
-    <p class="copy">© Copyright 2023
-      <span>skintoto-id.com</span>
-    </p>
+    <div class="container">
+      <img class="img" src="images/12.png" alt="12">
+      <div class="copy">
+        <span>© Copyright 2024</span>
+        <a href="#">skintoto-id.com</a>
+      </div>
+    </div>
   </footer>
 
   <script src="js/avif.js?_v=20240419015543"></script>
