--- a/promosi.html
+++ b/promosi.html
@@ -20,36 +20,33 @@
   <header class="header">
     <div class="container">
       <nav class="menu">
-        <a class="logo menu__logo" href="#">
-          <img class="logo__menu" src="images/logo.png" alt="logo">
-        </a>
         <button class="menu__btn" type="button">
           <span></span>
           <span class="sr-only">відкрити меню</span>
         </button>
         <ul class="menu__items">
           <li class="menu__item">
-            <a class="menu__link menu__link--active" href="#">
+            <a class="menu__link" href="">
               Skintoto
             </a>
           </li>
           <li class="menu__item">
-            <a class="menu__link" href="#service">
+            <a class="menu__link" href="how-to-play.html">
               Cara Bermain
             </a>
           </li>
           <li class="menu__item">
-            <a class="menu__link" href="#collections">
+            <a class="menu__link" href="promosi.html">
               Promosi
             </a>
           </li>
           <li class="menu__item">
-            <a class="menu__link" href="#products">
+            <a class="menu__link" href="skintoto-login.html">
               Login
             </a>
           </li>
           <li class="menu__item">
-            <a class="menu__link" href="#about">
+            <a class="menu__link" href="skintoto-slot.html">
               Skintoto slot
             </a>
           </li>
@@ -64,18 +61,19 @@
         <h2 class="title">
           SKINTOTO PROMOSI
         </h2>
-        <div class="text">
+        <div class="subtext">
           <span>Promosi saat ini di kasino online skintoto</span>
         </div>
-        <img class="img" src="" alt="">
-        <span>Bonus Rollingan Slot</span>
-        <p>Contoh Perhitungan Bonus :</p>
-        <p>Total Turnover : Rp 10.000.000</p>
-        <p>Komisi Rolingan : 0.3%</p>
-        <p>Bonus Yang Didapat : Rp 10.000.000 x 0.3 % = Rp 30.000</p>
-        <p>Jadi Total Bonus Rollingan Mingguan Anda Adalah Rp 30.000</p>
-
-        <div class="span">Syarat & Ketentuan :</div>
+        <img class="img" src="images/7.png" alt="7">
+        <div class="text">
+          <span class="subtext">Bonus Rollingan Slot</span>
+          <p>Contoh Perhitungan Bonus :</p>
+          <p>Total Turnover : Rp 10.000.000</p>
+          <p>Komisi Rolingan : 0.3%</p>
+          <p>Bonus Yang Didapat : Rp 10.000.000 x 0.3 % = Rp 30.000</p>
+          <span>Jadi Total Bonus Rollingan Mingguan Anda Adalah Rp 30.000</span>
+          <span>Syarat & Ketentuan :</span>
+        </div>
 
         <ul class="ol">
           <li class="li">
@@ -105,24 +103,28 @@
 
     <section class="section">
       <div class="container">
-        <h2 class="__title title">
+        <h2 class="title">
           BONUS ROLLINGAN CASHBACK CASINO
         </h2>
-        <span class="text">
+        <div class="text">
+          <span class="subtext">BONUS NEW MEMBER 100%</span>
           Untuk semua pemain baru, kasino menawarkan bonus sambutan sebesar 100% dari jumlah setoran pertama. Manfaatkan
           penawaran
           terbaik ini! Bermain dan menang besar.
-        </span>
+        </div>
         <a class="link" href="">BONUS 100%</a>
       </div>
     </section>
   </main>
 
   <footer class="footer">
-    <img class="img" src="" alt="">
-    <p class="copy">© Copyright 2023
-      <span>skintoto-id.com</span>
-    </p>
+    <div class="container">
+      <img class="img" src="images/8" alt="8">
+      <div class="copy">
+        <span>© Copyright 2024</span>
+        <a href="#">skintoto-id.com</a>
+      </div>
+    </div>
   </footer>
 
   <script src="js/avif.js?_v=20240419015543"></script>
