--- a/skintoto-login.html
+++ b/skintoto-login.html
@@ -19,52 +19,49 @@
 <body class="body">
   <header class="header">
     <div class="container">
-      <nav class="menu">
-        <a class="logo menu__logo" href="#">
-          <img class="logo__menu" src="images/logo.png" alt="logo">
-        </a>
-        <button class="menu__btn" type="button">
-          <span></span>
-          <span class="sr-only">відкрити меню</span>
-        </button>
-        <ul class="menu__items">
-          <li class="menu__item">
-            <a class="menu__link menu__link--active" href="#">
-              Skintoto
-            </a>
-          </li>
-          <li class="menu__item">
-            <a class="menu__link" href="#service">
-              Cara Bermain
-            </a>
-          </li>
-          <li class="menu__item">
-            <a class="menu__link" href="#collections">
-              Promosi
-            </a>
-          </li>
-          <li class="menu__item">
-            <a class="menu__link" href="#products">
-              Login
-            </a>
-          </li>
-          <li class="menu__item">
-            <a class="menu__link" href="#about">
-              Skintoto slot
-            </a>
-          </li>
-        </ul>
-      </nav>
+        <nav class="menu">
+          <button class="menu__btn" type="button">
+            <span></span>
+            <span class="sr-only">відкрити меню</span>
+          </button>
+          <ul class="menu__items">
+            <li class="menu__item">
+              <a class="menu__link" href="">
+                Skintoto
+              </a>
+            </li>
+            <li class="menu__item">
+              <a class="menu__link" href="how-to-play.html">
+                Cara Bermain
+              </a>
+            </li>
+            <li class="menu__item">
+              <a class="menu__link" href="promosi.html">
+                Promosi
+              </a>
+            </li>
+            <li class="menu__item">
+              <a class="menu__link" href="skintoto-login.html">
+                Login
+              </a>
+            </li>
+            <li class="menu__item">
+              <a class="menu__link" href="skintoto-slot.html">
+                Skintoto slot
+              </a>
+            </li>
+          </ul>
+        </nav>
     </div>
   </header>
 
   <main class="main">
     <section class="section">
       <div class="container">
-        <h2 class="__title title">
+        <h2 class="title">
           SKINTOTO LOGIN
         </h2>
-        <img class="img" src="" alt="">
+        <img class="img" src="images/7.png" alt="">
         <div class="text">
           <!-- 3строчки -->
           Akses ke situs skintot sangat mudah! ikuti tombol di bawah ini dan dapatkan banyak pilihan slot dan lotere
@@ -76,11 +73,14 @@
     </section>
   </main>
 
-  <footer class="footer">
-    <img class="img" src="" alt="">
-    <p class="copy">© Copyright 2023
-      <span>skintoto-id.com</span>
-    </p>
+    <footer class="footer">
+    <div class="container">
+      <img class="img" src="" alt="">
+      <div class="copy">
+        <span>© Copyright 2024</span>
+        <a href="#">skintoto-id.com</a>
+      </div>
+    </div>
   </footer>
 
   <script src="js/avif.js?_v=20240419015543"></script>
