--- a/skintoto-slot.html
+++ b/skintoto-slot.html
@@ -19,52 +19,49 @@
 <body class="body">
   <header class="header">
     <div class="container">
-      <nav class="menu">
-        <a class="logo menu__logo" href="#">
-          <img class="logo__menu" src="images/logo.png" alt="logo">
-        </a>
-        <button class="menu__btn" type="button">
-          <span></span>
-          <span class="sr-only">відкрити меню</span>
-        </button>
-        <ul class="menu__items">
-          <li class="menu__item">
-            <a class="menu__link menu__link--active" href="#">
-              Skintoto
-            </a>
-          </li>
-          <li class="menu__item">
-            <a class="menu__link" href="#service">
-              Cara Bermain
-            </a>
-          </li>
-          <li class="menu__item">
-            <a class="menu__link" href="#collections">
-              Promosi
-            </a>
-          </li>
-          <li class="menu__item">
-            <a class="menu__link" href="#products">
-              Login
-            </a>
-          </li>
-          <li class="menu__item">
-            <a class="menu__link" href="#about">
-              Skintoto slot
-            </a>
-          </li>
-        </ul>
-      </nav>
+        <nav class="menu">
+          <button class="menu__btn" type="button">
+            <span></span>
+            <span class="sr-only">відкрити меню</span>
+          </button>
+          <ul class="menu__items">
+            <li class="menu__item">
+              <a class="menu__link" href="">
+                Skintoto
+              </a>
+            </li>
+            <li class="menu__item">
+              <a class="menu__link" href="how-to-play.html">
+                Cara Bermain
+              </a>
+            </li>
+            <li class="menu__item">
+              <a class="menu__link" href="promosi.html">
+                Promosi
+              </a>
+            </li>
+            <li class="menu__item">
+              <a class="menu__link" href="skintoto-login.html">
+                Login
+              </a>
+            </li>
+            <li class="menu__item">
+              <a class="menu__link" href="skintoto-slot.html">
+                Skintoto slot
+              </a>
+            </li>
+          </ul>
+        </nav>
     </div>
   </header>
 
   <main class="main">
     <section class="section">
       <div class="container">
-        <h2 class="__title title">
+        <h2 class="title">
           SKINTOTO SLOT
         </h2>
-        <img class="img" src="" alt="">
+        <img class="img" src="images/11.png" alt="11">
         <div class="text">
           Permainan kasino telah ada selama berabad-abad dan terus menjadi sumber hiburan populer bagi orang-orang di
           seluruh
@@ -76,7 +73,7 @@
         </div>
         <a class="link" href="">SKINTOTO SLOT</a>
         <div class="text">
-          <p>
+          <span>
             <!-- 8строк   -->
             Untuk memainkan mesin slot online, Anda memerlukan komputer dengan koneksi jaringan. Hanya dengan beberapa
             klik
@@ -89,8 +86,8 @@
             populer yang telah menjadi klasik Garage, Fruit Cocktail atau Crazy Monkeys untuk dimainkan, dan bahkan
             tanpa
             meninggalkan rumah.
-          </p>
-          <p>
+          </span>
+          <span>
             <!-- 8строк   -->
             Satu prinsip universal dari gim ini memungkinkan untuk memainkan mesin slot apa pun secara gratis, tanpa
             menghabiskan
@@ -101,17 +98,20 @@
             menerima pembayaran nyata untuk kombinasi tersebut, dan jika Anda memainkan mesin slot online secara gratis,
             kesenangan
             dari proses tersebut akan menjadi hadiah terbaik. Bermainlah dengan senang hati di situs skintoto.
-          </p>
+          </span>
           <a class="link" href="">SKINTOTO SLOT</a>
         </div>
     </section>
   </main>
 
   <footer class="footer">
-    <img class="img" src="" alt="">
-    <p class="copy">© Copyright 2023
-      <span>skintoto-id.com</span>
-    </p>
+    <div class="container">
+      <img class="img" src="" alt="">
+      <div class="copy">
+        <span>© Copyright 2024</span>
+        <a href="#">skintoto-id.com</a>
+      </div>
+    </div>
   </footer>
 
   <script src="js/avif.js?_v=20240419015543"></script>
