--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
   <!-- <link rel="icon" href="favicon.ico" type="image/x-icon">
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon"> -->
   <!-- htnl -->
+  <!-- css -->
   <title></title>
   <link href="https://skintoto-id.com" rel="canonical">
   <link rel="stylesheet" href="css/style.min.css?_v=20230727015200">
